--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,10 @@ url: "famince.win" # the base hostname & protocol for your site, e.g. http://exa
 #twitter_username: jekyllrb
 github_username:  famince
 
+# google_analytics
+#google_analytics_id: UA-97554776-1
+google_analytics: UA-97554776-1
+
 # deployment
 #host: 0.0.0.0
 #port: 5000
