add baidu nanlytics

--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,8 @@ github_username:  famince
 #google_analytics_id: UA-97554776-1
 google_analytics: UA-97554776-1
 
+baidu-analysis: d42c5ec3e599258308794ff8a9372cc7
+
 # deployment
 #host: 0.0.0.0
 #port: 5000
