--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: famince@163.com
 description: > # this means to ignore newlines until "baseurl:"
   alex's life
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "famince.win" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://famince.win" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 github_username:  famince
 
